--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-session": "^1.10.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.1.3",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "4.0.0"
   }
 }
