--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "passport-local-mongoose": "4.0.0"
+  },
+  "devDependencies": {
+    "jest": "^23.0.1",
+    "supertest": "^3.1.0"
   }
 }
