--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,9 @@
 {
   "extends": "airbnb",
+  "plugins": ["jest"],
+  "env": {
+    "jest/globals": true,
+  },
   "rules": {
     "no-unused-vars": ["error", {"argsIgnorePattern": "next"}],
   },
