--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,7 @@
   },
   "rules": {
     "no-unused-vars": ["error", {"argsIgnorePattern": "next"}],
+    "indent": [2, "tab"],
+    "no-tabs": 0
   },
 }
