--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
@@ -16,9 +21,14 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.1.3",
     "morgan": "~1.9.0",
+    "node-sass": "^4.9.0",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
-    "passport-local-mongoose": "4.0.0"
+    "passport-local-mongoose": "4.0.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "sass-loader": "^7.0.1",
+    "webpack": "^4.10.2"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
