Webpack added, some config files created and a minor test with react added

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,8 @@
   "plugins": ["jest"],
   "env": {
     "jest/globals": true,
+    "browser": true,
+    "node": true,
   },
   "rules": {
     "no-unused-vars": ["error", {"argsIgnorePattern": "next"}],
