--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "build-dev": "webpack --config webpack.config.js --progress --profile --colors"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
@@ -38,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "jest": "^23.0.1",
-    "supertest": "^3.1.0"
+    "supertest": "^3.1.0",
+    "webpack-cli": "^2.1.5"
   }
 }
