--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start-w": "webpack-dev-server",
     "test": "jest",
     "lint": "eslint .",
     "build-dev": "webpack --config webpack.config.js --progress --profile --colors"
@@ -39,7 +40,9 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "jest": "^23.0.1",
+    "react-hot-loader": "^4.0.0",
     "supertest": "^3.1.0",
-    "webpack-cli": "^2.1.5"
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.4"
   }
 }
