--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,11 @@
     "no-unused-vars": ["error", {"argsIgnorePattern": "next"}],
     "react/prop-types": [0],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
-    "arrow-body-style": [2, "always"]
+    "arrow-body-style": [2, "always"],
+    "jsx-a11y/anchor-is-valid": [ "error", {
+            "components": [ "Link" ],
+            "specialLink": [ "hrefLeft", "hrefRight", "to" ],
+            "aspects": [ "noHref", "invalidHref", "preferButton" ]
+          }]
   },
 }
