--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-local-mongoose": "4.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^7.0.1",
     "webpack": "^4.10.2"
   },
