--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^7.0.1",
-    "webpack": "^4.10.2"
+    "webpack": "^4.10.2",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
