--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.0.0-alpha.6",
     "cookie-parser": "~1.4.3",
+    "css-loader": "^0.28.11",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-session": "^1.10.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.1.3",
     "morgan": "~1.9.0",
@@ -28,9 +31,13 @@
     "passport-local": "1.0.0",
     "passport-local-mongoose": "4.0.0",
     "react": "^16.4.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
+    "reactstrap": "^6.0.1",
     "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.10.2",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2"
