--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.1.1",
     "cookie-parser": "~1.4.3",
     "css-loader": "^0.28.11",
     "debug": "~2.6.9",
