--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "reactstrap": "^6.0.1",
+    "redux": "^4.0.0",
+    "redux-devtools": "^3.4.1",
     "sass-loader": "^7.0.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.10.2",
