--- a/.eslintrc
+++ b/.eslintrc
@@ -11,10 +11,11 @@
     "react/prop-types": [0],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "arrow-body-style": [2, "always"],
+    # "arrow-body-style": ["error", "as-needed"],
     "jsx-a11y/anchor-is-valid": [ "error", {
-            "components": [ "Link" ],
-            "specialLink": [ "hrefLeft", "hrefRight", "to" ],
-            "aspects": [ "noHref", "invalidHref", "preferButton" ]
-          }]
+      "components": [ "Link" ],
+      "specialLink": [ "hrefLeft", "hrefRight", "to" ],
+      "aspects": [ "noHref", "invalidHref", "preferButton" ]
+    }],
   },
 }
