--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "eslint-plugin-react": "^7.4.0",
     "jest": "^23.0.1",
     "react-hot-loader": "^4.0.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
     "supertest": "^3.1.0",
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.4"
