--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start-w": "webpack-dev-server",
+    "start-prod": "SET NODE_ENV=production&& node ./bin/www",
     "test": "jest",
     "lint": "eslint .",
-    "build-dev": "webpack --config webpack.config.js --progress --profile --colors"
+    "build-prod": "SET NODE_ENV=production&&webpack -p --config webpack.config.js"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
-    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.1",
     "cookie-parser": "~1.4.3",
@@ -58,7 +58,7 @@
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
     "supertest": "^3.1.0",
-    "webpack-cli": "^2.1.5",
-    "webpack-dev-server": "^3.1.4"
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack-cli": "^2.1.5"
   }
 }
