--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
 	"presets": [
 		"react",
-		["env", { "modules": false }]
+		["env", {
+        "targets": {
+          "browsers": ["last 2 Chrome versions"]
+        }
+      }
+		]
 	]
 }
