--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "bootstrap": "^4.1.1",
     "cookie-parser": "~1.4.3",
     "css-loader": "^0.28.11",
@@ -43,7 +44,8 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.10.2",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.2"
+    "webpack-hot-middleware": "^2.22.2",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
