--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.10.2",
