--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.10.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "http-errors": "~1.6.2",
+    "mailgun-js": "^0.18.0",
     "mongoose": "^5.1.3",
     "morgan": "~1.9.0",
     "node-sass": "^4.9.0",
