config example file updated

--- a/example.config.json
+++ b/example.config.json
@@ -2,6 +2,10 @@
   "crypto": {
     "secret": "some-random-string"
   },
+  "discogs": {
+    "key": "",
+    "secret": ""
+  },
   "expressSession": {
     "secret": "some-random-string"
   },
