--- a/package.json
+++ b/package.json
@@ -42,13 +42,10 @@
     "react-router-dom": "^4.2.2",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
-    "redux-devtools": "^3.4.1",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.10.2",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.2",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
@@ -60,11 +57,14 @@
     "eslint-plugin-react": "^7.4.0",
     "jest": "^23.0.1",
     "react-hot-loader": "^4.0.0",
+    "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
     "supertest": "^3.1.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack-cli": "^2.1.5"
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2"
   }
 }
