--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "css-loader": "^0.28.11",
     "debug": "~2.6.9",
     "disconnect": "^1.2.1",
+    "dompurify": "^1.0.5",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-rate-limit": "^2.11.0",
     "express-session": "^1.10.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "helmet": "^3.9.0",
     "http-errors": "~1.6.2",
+    "jsdom": "^11.11.0",
     "mailgun-js": "^0.18.0",
     "mongoose": "^5.1.3",
     "morgan": "~1.9.0",
